# dunesim

./: CMakeLists.txt  CMakePresets.json  README.md
dunesim/DetSim/: .#SimWireDUNE35t_module.cc  AdcCodeHelper.cxx  AdcCodeHelper.h  CMakeLists.txt  SignalTypeConverter.cxx  SimCounter35t_module.cc  SimWireDUNE10kt_module.cc  SimWireDUNE35t_module.cc  detsimmodules_dune.fcl
dunesim/DetSim/Module/: CMakeLists.txt  NoiseAdder_module.cc  SimCounter35t_module.cc  SimWireClnSigDUNE_module.cc  SimWireDUNE_module.cc  SimWireUniqNoiseDUNE_module.cc
dunesim/DetSim/NoiseModels/: 729-0_fft_mirror.root  729-0_fft_nomirror.root
dunesim/DetSim/Service/: CMakeLists.txt  DPhaseCoherentNoiseService.h  DPhaseCoherentNoiseService_service.cc  DPhaseFixedDetPedestalService.h  DPhaseFixedDetPedestalService_service.cc  DPhaseRealisticNoiseService.h  DPhaseRealisticNoiseService_service.cc  DPhaseSimChannelExtractService.h  DPhaseSimChannelExtractService_service.cc  Dune35tSimChannelExtractService.h  Dune35tSimChannelExtractService_service.cc  Dune35tZeroSuppressService.h  Dune35tZeroSuppressService_service.cc  ExpoWhiteChannelNoiseService.h  ExpoWhiteChannelNoiseService_service.cc  ExponentialChannelNoiseService.h  ExponentialChannelNoiseService_service.cc  FixedDetPedestalService.h  FixedDetPedestalService_service.cc  FixedZeroSuppressService.h  FixedZeroSuppressService_service.cc  GenericSimChannelExtractService.h  GenericSimChannelExtractService_service.cc  LarsoftHuffmanCompressService.h  LarsoftHuffmanCompressService_service.cc  Legacy35tZeroSuppressService.h  Legacy35tZeroSuppressService_service.cc  ProtoDUNEChannelNoiseService.h  ProtoDUNEChannelNoiseService_service.cc  ProvidedPedestalAdditionService.h  ProvidedPedestalAdditionService_service.cc  ReplaceCompressService.h  ReplaceCompressService_service.cc  SPhaseChannelNoiseService.h  SPhaseChannelNoiseService_service.cc  SPhaseUniqChannelNoiseService.h  SPhaseUniqChannelNoiseService_service.cc  ShapedCohProtoDUNENoiseService.h  ShapedCohProtoDUNENoiseService_service.cc  SimChannelExtract35tService.h  (+5 more)
dunesim/DetSim/Tool/: CMakeLists.txt  IdealAdcSimulator.h  IdealAdcSimulator_tool.cc  NoisyAdcSimulator.h  NoisyAdcSimulator_tool.cc
dunesim/DetSim/Utility/: AdcCodeHelper.cxx  AdcCodeHelper.h  CMakeLists.txt  SignalTypeConverter.cxx  SignalTypeConverter.h
dunesim/DetSim/fcl/: CMakeLists.txt  detsimmodules_dune.fcl  detsimtools_dune.fcl
dunesim/EventGenerator/: CMakeLists.txt  PDSPDataDrivenBeam.fcl  PDSPDataDrivenBeam_module.cc  ProtoDUNE2Laser.fcl  ProtoDUNE2Laser_module.cc  ProtoDUNEBeam_module.cc  ProtoDUNEHDLaser.fcl  ProtoDUNEHDLaser_module.cc  ProtoDUNETriggeredBeam_module.cc  atmo.fcl  corsika_protodune.fcl  evd_protodune_hd_laser.fcl  gen_protoDUNEDP_beam.fcl  make_THn_beam_input.py  make_laser_input.py  make_resolution.py  marley_dune.fcl  pdsp_datadriven_beam_job.fcl  prodnuescatter_dunefd.fcl  prodsingle_dune35t.fcl  prodsingle_dunefd.fcl  prodsingle_dunefd_buildoplib.fcl  prodsingle_dunefd_fastoptical.fcl  prodsingle_iceberg.fcl  prodsingle_iceberg_cosmics.fcl  prodsingle_iceberg_cosmics_nozs.fcl  prodsingle_iceberg_refactored.fcl  prodtext_dune35t.fcl  prodtext_dunefd.fcl  protoDUNE_gensingle_beam.fcl  protodune2_laser_job.fcl  protodune_hd_laser_cosmics_radios_job.fcl  protodune_hd_laser_job.fcl  protodunebeam.fcl  reco_momentum_tuples.py  singles_dune.fcl  supernova_dune.fcl  test_new_prod.fcl
dunesim/EventGenerator/CORSIKAprotodunedp/: CMakeLists.txt  CORSIKAGendp.fcl  CORSIKAGendp_module.cc  DataGen311_module.cc  Gen311_module.cc
dunesim/EventGenerator/CRY/: cry_dune.fcl  prodcosmics_dune35t.fcl  prodcosmics_dunefd.fcl
dunesim/EventGenerator/GENIE/: CMakeLists.txt  addgenie_dune.fcl  genie_dune.fcl  prodaddgenie_dune.fcl  prodgenie_dune35t.fcl  prodgenie_dunefd.fcl
dunesim/EventGenerator/MUSUN/: CMakeLists.txt  CosmicFilter_module.cc
dunesim/EventGenerator/NEUT/: CMakeLists.txt  NEUTImport_module.cc  neutimport.fcl
dunesim/EventGenerator/NuE/: CMakeLists.txt  NuEScatterGen.fcl  NuEScatterGen_module.cc
dunesim/EventGenerator/PDHD_H4Input_fcls/: pdhd_1GeV_h4input_cosmics.fcl  pdhd_5GeV_h4input_cosmics.fcl
dunesim/EventGenerator/PDSP_H4Input_fcls/: pdsp_0.5GeV_h4input_cosmics.fcl  pdsp_1GeV_h4input_cosmics.fcl
dunesim/EventGenerator/ProtoDUNEbeamDataProducts/: .ProtoDUNEbeamsim.h.swp  CMakeLists.txt  ProtoDUNEBeamInstrument.cxx  ProtoDUNEBeamInstrument.h  ProtoDUNEBeamTPCMatching.fcl  ProtoDUNEBeamTPCMatching_module.cc  ProtoDUNEBeamTest.fcl  ProtoDUNEBeamTest_module.cc  ProtoDUNEbeamsim.cxx  ProtoDUNEbeamsim.h  classes.h  classes_def.xml  classesdef.txt
dunesim/EventGenerator/ProtoDUNEbeamTPCmatching/: ProtoDUNEbeammatch.cxx  ProtoDUNEbeammatch.h
dunesim/EventGenerator/Radiological/: CMakeLists.txt  dune_dp_radiological_model.fcl  dune_dp_radiological_model_10kt_4x2_workspace.fcl  dune_radiological_model.fcl  dune_radiological_model_decay0.fcl  dune_radiological_model_decay0_hd_1x2x2.fcl  dune_radiological_model_decay0_hd_1x2x6.fcl  dune_radiological_model_decay0_hd_common.fcl  dune_radiological_model_decay0_v3_2.fcl  dune_radiological_model_decay0_v3_4.fcl  dune_radiological_model_decay0_v3_4_for1x2x2.fcl  dune_radiological_model_decay0_v3_4_for1x2x6.fcl  dune_radiological_model_decay0_v3_4_hd_1x2x2.fcl  dune_radiological_model_decay0_v3_4_hd_1x2x6.fcl  dune_radiological_model_decay0_v3_4_hd_common.fcl  dune_radiological_model_decay0_v3_4_vd_1x8x14.fcl  dune_radiological_model_decay0_v3_4_vd_1x8x6.fcl  dune_radiological_model_decay0_v3_4_vd_common.fcl  dune_radiological_model_decay0_v3_4_vd_for1x8x6.fcl  dune_radiological_model_decay0_v3_5_for1x2x2.fcl  dune_radiological_model_decay0_v3_5_for1x2x6.fcl  dune_radiological_model_decay0_v3_5_hd_1x2x2.fcl  dune_radiological_model_decay0_v3_5_hd_1x2x6.fcl  dune_radiological_model_decay0_v3_5_vd_1x8x14.fcl  dune_radiological_model_decay0_v3_5_vd_1x8x6.fcl  dune_radiological_model_decay0_v3_5_vd_for1x8x14.fcl  dune_radiological_model_decay0_v3_5_vd_for1x8x6.fcl  dune_radiological_model_decay0_v3_6_for1x2x2.fcl  dune_radiological_model_decay0_v3_6_for1x2x6.fcl  (+25 more)
(+121 files in other folders)
